[package]
name = "sla_format_tools"
version = "0.1.0"
authors = ["Frans-Willem Hardijzer <fw@hardijzer.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
cookie-factory = "0.3"
image = "0.22"
zip = "0.5"
rust-ini = "0.13"
clap = "2.33"
rayon = "1.2"
pbr = "1.0.2"
gtk = "0.8"
gdk = "0.12"
gio = "0.8"
